# wev-awscodeartifact

./: .coveragerc  .editorconfig  .gitignore  .yamllint.yml  LICENSE  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py  test.sh
.github/workflows/: ci.yml
functional-test/: .wev.yml  Pipfile.template  infrastructure.cf.yml
wev_awscodeartifact/: __init__.py  authoriser.py  conftest.py  plugin.py  test_authoriser.py  test_plugin.py  test_version.py  version.py
