[flake8]
max-line-length = 88
exclude = .venv, build, dist

[isort]
profile = black

[metadata]
license_files = LICENSE

[mypy]
disallow_incomplete_defs = True
disallow_untyped_calls = True
disallow_untyped_decorators = True
disallow_untyped_defs = True
no_implicit_optional = True
pretty = True
warn_redundant_casts = True
warn_return_any = True
warn_unused_ignores = True

[mypy-botocore.*]
ignore_missing_imports = True
